USUI 0.016beta: add lib: round, fence color input to stop going off screen, add custom amount of ticks on range inputs

--- a/usui/USUI.css
+++ b/usui/USUI.css
@@ -1,7 +1,7 @@
 /* 
     UserScript UI
     -- made by CCN0 -- https://ccn0.net/pages/usui -- https://github.com/ccn0/usui/ --
-    version 0.015beta
+    version 0.016beta
 */
 
 .USUI_popup {
@@ -84,6 +84,8 @@
 
 .USUI_M_prompt {
     position: fixed;
+    top:0px;
+    left:0px;
     padding: 8px;
     width: auto;
     height: auto;
@@ -154,33 +156,42 @@
     margin:0;
 }
 
-.USUI_M_tickInCont {
+.USUI_M_bbTickInCont {
     flex: 1;
     width: 100%;
     display: flex;
     flex-direction: column;
 }
 
-.USUI_M_tickCont {
+.USUI_M_bbTickCont {
     display: flex;
     max-height: 24px;
     flex: 1;
     font-size: 100%;
     user-select: none;
     align-content: center;
-    align-items: center;
+    justify-content: space-between;
+    margin: 0 10px;
 }
 
-.USUI_M_tick {
-    width: fit-content;
-    flex: 1;
-    &:nth-child(1) {
+/* .USUI_M_bbTick {
+    text-align: center;
+    &:first-child {
         text-align: left;
     }
-    &:nth-child(2) {
-        text-align: center;
-    }
-    &:nth-child(3) {
+    &:last-child {
         text-align: right;
     }
+} */
+
+.USUI_M_bbTick {
+    width: 0px;
+    position: relative;
+}
+
+.USUI_M_bbTick span {
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+    white-space: nowrap;
 }
